# mazorca

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setvars.sh
src/: CMakeLists.txt
src/cmake/: mazorcaConfig.cmake
src/include/mazorca/: mazorca.hpp
test/: CMakeLists.txt
